core/shotcore/include/shotcore.h

char *shotcore_snap_object(const uint8_t *rgba, uintptr_t len, uint32_t width, uint32_t height, double x, double y, double w, double h, uint8_t tolerance);
char *shotcore_qr_encode(const char *text);
/* Encode text into a QR PNG at out_path (scale = px per module, quiet = quiet-zone modules). Returns 0 on success. */
int shotcore_qr_encode_png(const char *text, uint32_t scale, uint32_t quiet, const char *out_path);
char *shotcore_qr_decode(const uint8_t *rgba, uintptr_t len, uint32_t width, uint32_t height);
char *shotcore_record_elapsed(uint64_t ms);
uint64_t shotcore_record_frame_count(uint32_t fps, uint64_t duration_ms);
char *shotcore_record_camera_rect(const char *cam_json, uint32_t width, uint32_t height);
char *shotcore_record_keystroke_rect(const char *disp_json, uint32_t width, uint32_t height, uint32_t text_len);
char *shotcore_crosshair_lines(double cx, double cy, double w, double h);
char *shotcore_pixel_hex(const uint8_t *rgba, uintptr_t len, uint32_t width, uint32_t height, uint32_t x, uint32_t y);
char *shotcore_region_average_hex(const uint8_t *rgba, uintptr_t len, uint32_t width, uint32_t height, double x, double y, double w, double h);
char *shotcore_ocr_text_in_region(const char *ocr_json, double x, double y, double w, double h);
char *shotcore_ocr_single_line(const char *ocr_json);
int64_t shotcore_ocr_word_count_region(const char *ocr_json, double x, double y, double w, double h);
char *shotcore_share_request(const char *password, int64_t expires_at, int64_t max_views);
char *shotcore_share_link(const char *base_url, const char *response_json);
char *shotcore_settings_default(void);
char *shotcore_settings_normalize(const char *json);
char *shotcore_overlay_default(void);
int32_t shotcore_overlay_should_close(const char *overlay_json, int64_t now, int64_t last_interaction);
uint64_t shotcore_ahash(const uint8_t *rgba, uintptr_t len, uint32_t width, uint32_t height);
uint64_t shotcore_dhash(const uint8_t *rgba, uintptr_t len, uint32_t width, uint32_t height);
uint32_t shotcore_hamming(uint64_t a, uint64_t b);
char *shotcore_dominant_colors(const uint8_t *rgba, uintptr_t len, uint32_t width, uint32_t height, uint32_t k);
char *shotcore_image_diff(const uint8_t *a, uintptr_t a_len, uint32_t aw, uint32_t ah, const uint8_t *b, uintptr_t b_len, uint32_t bw, uint32_t bh, uint8_t tol);
uint64_t shotcore_edge_count(const uint8_t *rgba, uintptr_t len, uint32_t width, uint32_t height, uint8_t threshold);
char *shotcore_segment_regions(const uint8_t *rgba, uintptr_t len, uint32_t width, uint32_t height, uint8_t tol, uint32_t min_area);
int32_t shotcore_otsu_threshold(const uint8_t *rgba, uintptr_t len, uint32_t width, uint32_t height);
char *shotcore_horizontal_lines(const uint8_t *rgba, uintptr_t len, uint32_t width, uint32_t height, float frac);
char *shotcore_vertical_lines(const uint8_t *rgba, uintptr_t len, uint32_t width, uint32_t height, float frac);
char *shotcore_ean13_encode(const char *digits);
char *shotcore_ean13_decode(const uint8_t *rgba, uintptr_t len, uint32_t width, uint32_t height);
/* Opaque stateful annotation editor handle. */
typedef struct ShotEditor ShotEditor;
ShotEditor *shotcore_editor_new(uint32_t width, uint32_t height);
void shotcore_editor_free(ShotEditor *ed);
void shotcore_editor_set_tool(ShotEditor *ed, uint32_t tool);
void shotcore_editor_pointer_down(ShotEditor *ed, double x, double y);
void shotcore_editor_pointer_drag(ShotEditor *ed, double x, double y);
void shotcore_editor_pointer_up(ShotEditor *ed, double x, double y);
int shotcore_editor_undo(ShotEditor *ed);
int shotcore_editor_redo(ShotEditor *ed);
int shotcore_editor_delete_selected(ShotEditor *ed);
int shotcore_editor_bring_to_front(ShotEditor *ed);
int shotcore_editor_send_to_back(ShotEditor *ed);
int shotcore_editor_set_selected_text(ShotEditor *ed, const char *text);
char *shotcore_editor_render_json(ShotEditor *ed);
char *shotcore_editor_document_json(ShotEditor *ed);
int shotcore_editor_can_undo(ShotEditor *ed);
int shotcore_editor_can_redo(ShotEditor *ed);