apps/windows/SloerShot.App/Interop/ShotCore.cs


    // ---- Stateful editor handle (drive the shared editor from the canvas) ----
    [DllImport(Lib, EntryPoint = "shotcore_editor_new")]
    public static extern IntPtr EditorNew(uint width, uint height);
    [DllImport(Lib, EntryPoint = "shotcore_editor_free")]
    public static extern void EditorFree(IntPtr ed);
    [DllImport(Lib, EntryPoint = "shotcore_editor_set_tool")]
    public static extern void EditorSetTool(IntPtr ed, uint tool);
    [DllImport(Lib, EntryPoint = "shotcore_editor_pointer_down")]
    public static extern void EditorPointerDown(IntPtr ed, double x, double y);
    [DllImport(Lib, EntryPoint = "shotcore_editor_pointer_drag")]
    public static extern void EditorPointerDrag(IntPtr ed, double x, double y);
    [DllImport(Lib, EntryPoint = "shotcore_editor_pointer_up")]
    public static extern void EditorPointerUp(IntPtr ed, double x, double y);
    [DllImport(Lib, EntryPoint = "shotcore_editor_undo")]
    public static extern int EditorUndo(IntPtr ed);
    [DllImport(Lib, EntryPoint = "shotcore_editor_redo")]
    public static extern int EditorRedo(IntPtr ed);
    [DllImport(Lib, EntryPoint = "shotcore_editor_delete_selected")]
    public static extern int EditorDeleteSelected(IntPtr ed);
    [DllImport(Lib, EntryPoint = "shotcore_editor_bring_to_front")]
    public static extern int EditorBringToFront(IntPtr ed);
    [DllImport(Lib, EntryPoint = "shotcore_editor_send_to_back")]
    public static extern int EditorSendToBack(IntPtr ed);
    [DllImport(Lib, EntryPoint = "shotcore_editor_set_selected_text", CharSet = CharSet.Ansi)]
    public static extern int EditorSetSelectedText(IntPtr ed, string text);
    [DllImport(Lib, EntryPoint = "shotcore_editor_render_json")]
    private static extern IntPtr EditorRenderJsonRaw(IntPtr ed);
    public static string? EditorRenderJson(IntPtr ed) => TakeString(EditorRenderJsonRaw(ed));
    [DllImport(Lib, EntryPoint = "shotcore_editor_document_json")]
    private static extern IntPtr EditorDocumentJsonRaw(IntPtr ed);
    public static string? EditorDocumentJson(IntPtr ed) => TakeString(EditorDocumentJsonRaw(ed));
    [DllImport(Lib, EntryPoint = "shotcore_editor_can_undo")]
    public static extern int EditorCanUndo(IntPtr ed);
    [DllImport(Lib, EntryPoint = "shotcore_editor_can_redo")]
    public static extern int EditorCanRedo(IntPtr ed);
 // --- Recording engine (overlay geometry + scheduling via the tested core) ---
 [DllImport(Lib, EntryPoint = "shotcore_record_elapsed")]
 private static extern IntPtr RecordElapsedRaw(ulong ms);
 public static string? RecordElapsed(ulong ms) => TakeString(RecordElapsedRaw(ms));
 [DllImport(Lib, EntryPoint = "shotcore_record_frame_count")]
 public static extern ulong RecordFrameCount(uint fps, ulong durationMs);
 [DllImport(Lib, EntryPoint = "shotcore_record_camera_rect", CharSet = CharSet.Ansi)]
 private static extern IntPtr RecordCameraRectRaw(string camJson, uint width, uint height);
 public static string? RecordCameraRect(string camJson, uint width, uint height) => TakeString(RecordCameraRectRaw(camJson, width, height));
 [DllImport(Lib, EntryPoint = "shotcore_record_keystroke_rect", CharSet = CharSet.Ansi)]
 private static extern IntPtr RecordKeystrokeRectRaw(string dispJson, uint width, uint height, uint textLen);
 public static string? RecordKeystrokeRect(string dispJson, uint width, uint height, uint textLen) => TakeString(RecordKeystrokeRectRaw(dispJson, width, height, textLen));
 // --- QR generate + scan (pure-Rust core) ---
 [DllImport(Lib, EntryPoint = "shotcore_qr_encode", CharSet = CharSet.Ansi)]
 private static extern IntPtr QrEncodeRaw(string text);
 public static string? QrEncode(string text) => TakeString(QrEncodeRaw(text));
 [DllImport(Lib, EntryPoint = "shotcore_qr_encode_png", CharSet = CharSet.Ansi)]
 public static extern int QrEncodePng(string text, uint scale, uint quiet, string outPath);
 [DllImport(Lib, EntryPoint = "shotcore_qr_decode")]
 private static extern IntPtr QrDecodeRaw(byte[] rgba, UIntPtr len, uint width, uint height);
 public static string? QrDecode(byte[] rgba, uint width, uint height) => TakeString(QrDecodeRaw(rgba, (UIntPtr)rgba.Length, width, height));
 // --- PixelSnap snap-to-object ---
 [DllImport(Lib, EntryPoint = "shotcore_snap_object")]
 private static extern IntPtr SnapObjectRaw(byte[] rgba, UIntPtr len, uint width, uint height, double x, double y, double w, double h, byte tolerance);
 public static string? SnapObject(byte[] rgba, uint width, uint height, double x, double y, double w, double h, byte tolerance) => TakeString(SnapObjectRaw(rgba, (UIntPtr)rgba.Length, width, height, x, y, w, h, tolerance));
 // --- Crosshair + magnifier + eyedropper (advanced capture) ---
 [DllImport(Lib, EntryPoint = "shotcore_crosshair_lines")]
 private static extern IntPtr CrosshairLinesRaw(double cx, double cy, double w, double h);
 public static string? CrosshairLines(double cx, double cy, double w, double h) => TakeString(CrosshairLinesRaw(cx, cy, w, h));
 [DllImport(Lib, EntryPoint = "shotcore_pixel_hex")]
 private static extern IntPtr PixelHexRaw(byte[] rgba, UIntPtr len, uint width, uint height, uint x, uint y);
 public static string? PixelHex(byte[] rgba, uint width, uint height, uint x, uint y) => TakeString(PixelHexRaw(rgba, (UIntPtr)rgba.Length, width, height, x, y));
 [DllImport(Lib, EntryPoint = "shotcore_region_average_hex")]
 private static extern IntPtr RegionAverageHexRaw(byte[] rgba, UIntPtr len, uint width, uint height, double x, double y, double w, double h);
 public static string? RegionAverageHex(byte[] rgba, uint width, uint height, double x, double y, double w, double h) => TakeString(RegionAverageHexRaw(rgba, (UIntPtr)rgba.Length, width, height, x, y, w, h));
 // --- OCR capture flow (text recognition copy) ---
 [DllImport(Lib, EntryPoint = "shotcore_ocr_text_in_region", CharSet = CharSet.Ansi)]
 private static extern IntPtr OcrTextInRegionRaw(string ocrJson, double x, double y, double w, double h);
 public static string? OcrTextInRegion(string ocrJson, double x, double y, double w, double h) => TakeString(OcrTextInRegionRaw(ocrJson, x, y, w, h));
 [DllImport(Lib, EntryPoint = "shotcore_ocr_single_line", CharSet = CharSet.Ansi)]
 private static extern IntPtr OcrSingleLineRaw(string ocrJson);
 public static string? OcrSingleLine(string ocrJson) => TakeString(OcrSingleLineRaw(ocrJson));
 [DllImport(Lib, EntryPoint = "shotcore_ocr_word_count_region", CharSet = CharSet.Ansi)]
 public static extern long OcrWordCountRegion(string ocrJson, double x, double y, double w, double h);
 // --- Cloud share (CleanShot Cloud) ---
 [DllImport(Lib, EntryPoint = "shotcore_share_request", CharSet = CharSet.Ansi)]
 private static extern IntPtr ShareRequestRaw(string? password, long expiresAt, long maxViews);
 public static string? ShareRequestBody(string? password, long expiresAt, long maxViews) => TakeString(ShareRequestRaw(password, expiresAt, maxViews));
 [DllImport(Lib, EntryPoint = "shotcore_share_link", CharSet = CharSet.Ansi)]
 private static extern IntPtr ShareLinkRaw(string baseUrl, string responseJson);
 public static string? ShareLink(string baseUrl, string responseJson) => TakeString(ShareLinkRaw(baseUrl, responseJson));
 // --- Settings + Quick Access Overlay ---
 [DllImport(Lib, EntryPoint = "shotcore_settings_default")]
 private static extern IntPtr SettingsDefaultRaw();
 public static string? SettingsDefault() => TakeString(SettingsDefaultRaw());
 [DllImport(Lib, EntryPoint = "shotcore_settings_normalize", CharSet = CharSet.Ansi)]
 private static extern IntPtr SettingsNormalizeRaw(string json);
 public static string? SettingsNormalize(string json) => TakeString(SettingsNormalizeRaw(json));
 [DllImport(Lib, EntryPoint = "shotcore_overlay_default")]
 private static extern IntPtr OverlayDefaultRaw();
 public static string? OverlayDefault() => TakeString(OverlayDefaultRaw());
 [DllImport(Lib, EntryPoint = "shotcore_overlay_should_close", CharSet = CharSet.Ansi)]
 public static extern int OverlayShouldClose(string overlayJson, long now, long lastInteraction);
 // --- Perceptual hashing (history dedupe / find-similar) ---
 [DllImport(Lib, EntryPoint = "shotcore_ahash")]
 private static extern ulong AHashRaw(byte[] rgba, UIntPtr len, uint width, uint height);
 public static ulong AHash(byte[] rgba, uint width, uint height) => AHashRaw(rgba, (UIntPtr)rgba.Length, width, height);
 [DllImport(Lib, EntryPoint = "shotcore_dhash")]
 private static extern ulong DHashRaw(byte[] rgba, UIntPtr len, uint width, uint height);
 public static ulong DHash(byte[] rgba, uint width, uint height) => DHashRaw(rgba, (UIntPtr)rgba.Length, width, height);
 [DllImport(Lib, EntryPoint = "shotcore_hamming")]
 public static extern uint Hamming(ulong a, ulong b);
 // --- Dominant color extraction (Background tool palette) ---
 [DllImport(Lib, EntryPoint = "shotcore_dominant_colors")]
 private static extern IntPtr DominantColorsRaw(byte[] rgba, UIntPtr len, uint width, uint height, uint k);
 public static string? DominantColors(byte[] rgba, uint width, uint height, uint k) => TakeString(DominantColorsRaw(rgba, (UIntPtr)rgba.Length, width, height, k));
 // --- Vision: image diff, edge count, region segmentation ---
 [DllImport(Lib, EntryPoint = "shotcore_image_diff")]
 private static extern IntPtr ImageDiffRaw(byte[] a, UIntPtr aLen, uint aw, uint ah, byte[] b, UIntPtr bLen, uint bw, uint bh, byte tol);
 public static string? ImageDiff(byte[] a, uint aw, uint ah, byte[] b, uint bw, uint bh, byte tol) => TakeString(ImageDiffRaw(a, (UIntPtr)a.Length, aw, ah, b, (UIntPtr)b.Length, bw, bh, tol));
 [DllImport(Lib, EntryPoint = "shotcore_edge_count")]
 private static extern ulong EdgeCountRaw(byte[] rgba, UIntPtr len, uint width, uint height, byte threshold);
 public static ulong EdgeCount(byte[] rgba, uint width, uint height, byte threshold) => EdgeCountRaw(rgba, (UIntPtr)rgba.Length, width, height, threshold);
 [DllImport(Lib, EntryPoint = "shotcore_segment_regions")]
 private static extern IntPtr SegmentRegionsRaw(byte[] rgba, UIntPtr len, uint width, uint height, byte tol, uint minArea);
 public static string? SegmentRegions(byte[] rgba, uint width, uint height, byte tol, uint minArea) => TakeString(SegmentRegionsRaw(rgba, (UIntPtr)rgba.Length, width, height, tol, minArea));
 // --- Adaptive threshold + guide-line detection + EAN-13 barcode ---
 [DllImport(Lib, EntryPoint = "shotcore_otsu_threshold")]
 private static extern int OtsuThresholdRaw(byte[] rgba, UIntPtr len, uint width, uint height);
 public static int OtsuThreshold(byte[] rgba, uint width, uint height) => OtsuThresholdRaw(rgba, (UIntPtr)rgba.Length, width, height);
 [DllImport(Lib, EntryPoint = "shotcore_horizontal_lines")]
 private static extern IntPtr HorizontalLinesRaw(byte[] rgba, UIntPtr len, uint width, uint height, float frac);
 public static string? HorizontalLines(byte[] rgba, uint width, uint height, float frac) => TakeString(HorizontalLinesRaw(rgba, (UIntPtr)rgba.Length, width, height, frac));
 [DllImport(Lib, EntryPoint = "shotcore_vertical_lines")]
 private static extern IntPtr VerticalLinesRaw(byte[] rgba, UIntPtr len, uint width, uint height, float frac);
 public static string? VerticalLines(byte[] rgba, uint width, uint height, float frac) => TakeString(VerticalLinesRaw(rgba, (UIntPtr)rgba.Length, width, height, frac));
 [DllImport(Lib, EntryPoint = "shotcore_ean13_encode", CharSet = CharSet.Ansi)]
 private static extern IntPtr Ean13EncodeRaw(string digits);
 public static string? Ean13Encode(string digits) => TakeString(Ean13EncodeRaw(digits));
 [DllImport(Lib, EntryPoint = "shotcore_ean13_decode")]
 private static extern IntPtr Ean13DecodeRaw(byte[] rgba, UIntPtr len, uint width, uint height);
 public static string? Ean13Decode(byte[] rgba, uint width, uint height) => TakeString(Ean13DecodeRaw(rgba, (UIntPtr)rgba.Length, width, height));
